# Rust-Hex-Utils

./: Cargo.toml  LICENSE
game_compat/: Cargo.toml
game_compat/src/: main.rs
hex_decoder/: Cargo.toml
hex_decoder/src/: hexal.txt  hexbound.txt  hexcasting.txt  hexkinetics.txt  hextweaks.txt  main.rs  moreiotas.txt
hex_decoder/src/pattern_files/: hexal.txt  hexbound.txt  hexcasting.txt  hexkinetics.txt  hextweaks.txt  moreiotas.txt
hex_gui/: Cargo.toml
hex_renderer/: Cargo.toml  README.md
hex_renderer/examples/: 01_patterns_and_defaults.rs  02_pattern_options.rs
hex_renderer/src/: direction.rs  draw_options.rs  hex_grid.rs  lib.rs  main.rs  pattern.rs  pattern_grid.rs  pattern_grid_options.rs
hex_renderer/src/grids/: hex_grid.rs  mod.rs  square_grid.rs
hex_renderer/src/options/: defaults.rs  draw_options.rs  mod.rs  palettes.rs  pattern_grid_options.rs
hex_renderer/src/pattern/: draw_gradient.rs  draw_monocolor.rs  draw_segments.rs  mod.rs  pattern.rs  pattern_internal.rs  point.rs  text.rs  triangle.rs
hex_renderer/src/pattern_utils/: angle.rs  connection_point.rs  coord.rs  direction.rs  dynamic_list.rs  hex_coord.rs  line_drawer.rs  mod.rs
hex_renderer_cli/: Cargo.toml
hex_renderer_cli/src/: main.rs  parse_patterns.rs
markdown_generator/: Cargo.toml
src/: coord.rs  draw_options.rs  hex_coord.rs  main.rs  pattern.rs  pattern_grid.rs
