[package]
name = "game_compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.4"
pest_derive = "2.7.4"
hex_renderer = { path = "../hex_renderer"}

[profile.dev.package.hex_renderer]
opt-level = 3