[package]
name = "hex_renderer_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive"]}
hex_renderer = { path = "../hex_renderer"}
pest = "2.7.2"
pest_derive = "2.7.2"
